# sorcery

./: .clang-format  .gitattributes  .gitignore  ApplyPatch.cmake  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  Dependencies.cmake  Makefile  README.md  Sorcery.cdproj  build.sh  compile_commands.json  cppcheck.txt  get_git_tags.sh  imgui.ini  imgui_toggle-imgui-1.92.8.patch  move.sh  sorcery  sorcery-sfml.code-workspace  sorcery.cbp  sorcery.depend  sorcery.layout
.debris/2021-05-26 19.10.25.00/: nanogui.style
.github/: FUNDING.yml
cfg/: config.ini  imgui.ini
dat/: .items.json.swp  OFL.txt  atlas-preset.json  atlas.json  explain.json  icons.json  items.json  layout.json  layout.txt  levels.json  maps.json  monsters.json  sorcery.db3  sorcery.db3-journal  strings.json  textures.json  view.json
dev/: program-flow.dia  program-flow.dia.autosave  program-flow.odg
doc/: COMPILE  COMPILE.md  CREDITS  HELP  README  VERSION
env/: .all.mk  .debug.mk  linux.all.mk
gfx/: backgrounds.tga  banner.tga  credits.tga  events.tga  icons.tga  items.tga  known.tga  logo.tga  maps.tga  unknown.tga  wireframe.tga
gui/: nanogui.style
inc/: allocatepanel.hpp  animation.hpp  application.hpp  attractmode.hpp  attributedisplay.hpp  automap.hpp  banner.hpp  buffbar.hpp  camera.hpp  castle.hpp  changeclass.hpp  changename.hpp  character.hpp  characterdisplay.hpp  characterpanel.hpp  charactersummary.hpp  characterview.hpp  charpanel.hpp  compass.hpp  compendium.hpp  component.hpp  config.hpp  confirm.hpp  console.hpp  controloverlay.hpp  create.hpp  database.hpp  debuffbar.hpp  define.hpp  dialog.hpp  display.hpp  edgeoftown.hpp  edit.hpp  encounter.hpp  engine.hpp  entity.hpp  enum.hpp  error.hpp  event.hpp  explore.hpp  (+74 more)
inc/backwardcpp/: backward.cpp  backward.hpp
inc/common/: cereal.hpp  define.hpp  enum.hpp  ffmpeg.hpp  imgui.hpp  include.hpp  macro.hpp  opengl.hpp  sdl2.hpp  sqllite.hpp  type.hpp  types.hpp
inc/core/: animation.hpp  application.hpp  audioplayer.hpp  config.hpp  context.hpp  controller.hpp  database.hpp  debug.hpp  define.hpp  display.hpp  enum.hpp  event.hpp  file.hpp  game.hpp  graphics.hpp  include.hpp  input.hpp  layout.hpp  macro.hpp  platform.hpp  random.hpp  render.hpp  resourcemanager.hpp  resources.hpp  screens.hpp  state.hpp  string.hpp  system.hpp  type.hpp  types.hpp  ui.hpp  video.hpp  view.hpp  window.hpp
inc/engine/: automap.hpp  define.hpp  engine.hpp  enum.hpp  event.hpp  graveyard.hpp  include.hpp  inspect.hpp  inventory.hpp  render.hpp  reorder.hpp  rest.hpp  search.hpp  trade.hpp  type.hpp  types.hpp  view.hpp
inc/frontend/: atlas.hpp  attractmode.hpp  banner.hpp  bestiary.hpp  compendium.hpp  define.hpp  license.hpp  mainmenu.hpp  museum.hpp  options.hpp  spellbook.hpp  splash.hpp
inc/gui/: allocatepanel.hpp  attributedisplay.hpp  automap.hpp  buffbar.hpp  characterdisplay.hpp  characterpanel.hpp  compass.hpp  console.hpp  controloverlay.hpp  debuffbar.hpp  define.hpp  dialog.hpp  enum.hpp  frame.hpp  iconpanel.hpp  include.hpp  infopanel.hpp  input.hpp  inventorydisplay.hpp  itemdisplay.hpp  keyboard.hpp  macro.hpp  map.hpp  menu.hpp  menu2.hpp  menuaction.hpp  (+13 more)
sav/: game.json
src/: allocatepanel.cpp  animation.cpp  application.cpp  attractmode.cpp  attributedisplay.cpp  automap.cpp  banner.cpp  buffbar.cpp  camera.cpp  castle.cpp  changeclass.cpp  changename.cpp  character.cpp  characterdisplay.cpp  characterpanel.cpp  charactersummary.cpp  characterview.cpp  charpanel.cpp  compass.cpp  compendium.cpp  component.cpp  config.cpp  confirm.cpp  console.cpp  controloverlay.cpp  create.cpp  database.cpp  dialog.cpp  display.cpp  edgeoftown.cpp  edit.cpp  encounter.cpp  engine.cpp  entity.cpp  error.cpp  event.cpp  explore.cpp  file.cpp  font.cpp  frame.cpp  (+72 more)
src/core/: CMakeLists.txt  animation.cpp  application.cpp  audioplayer.cpp  config.cpp  context.cpp  controller.cpp  database.cpp  display.cpp  event.cpp  explore.cpp  file.cpp  game.cpp  graphics.cpp  iconstore.cpp  input.cpp  itemstore.cpp  layout.cpp  levelstore.cpp  platform.cpp  random.cpp  render.cpp  resourcemanager.cpp  resources.cpp  state.cpp  string.cpp  stringstore.cpp  system.cpp  texturestore.cpp  ui.cpp  video.cpp  view.cpp  window.cpp
src/engine/: CMakeLists.txt  automap.cpp  engine.cpp  event.cpp  graveyard.cpp  inspect.cpp  inventory.cpp  map.cpp  render.cpp  reorder.cpp  rest.cpp  search.cpp  trade.cpp  view.cpp
src/frontend/: CMakeLists.txt  atlas.cpp  attractmode.cpp  banner.cpp  bestiary.cpp  compendium.cpp  license.cpp  mainmenu.cpp  museum.cpp  options.cpp  spellbook.cpp  splash.cpp
src/gui/: CMakeLists.txt  allocatepanel.cpp  attributedisplay.cpp  automap.cpp  buffbar.cpp  characterdisplay.cpp  characterpanel.cpp  compass.cpp  console.cpp  controloverlay.cpp  debuffbar.cpp  dialog.cpp  frame.cpp  iconpanel.cpp  infopanel.cpp  input.cpp  inventorydisplay.cpp  itemdisplay.cpp  keyboard.cpp  map.cpp  menu.cpp  menu2.cpp  menuaction.cpp  menubuilder.cpp  menupaged.cpp  message.cpp  modal.cpp  monsterdisplay.cpp  partypanel.cpp  popup.cpp  spellpanel.cpp  text.cpp  textpanel.cpp  video.cpp  videoplayer.cpp
src/modules/: CMakeLists.txt  add.cpp  automap.cpp  buy.cpp  castle.cpp  changeclass.cpp  changename.cpp  choose.cpp  create.cpp  edgeoftown.cpp  edit.cpp  heal.cpp  inn.cpp  inspect.cpp  legate.cpp  levelup.cpp  method.cpp  nolevelup.cpp  pay.cpp  recovery.cpp  remove.cpp  reorder.cpp  rest.cpp  restart.cpp  roster.cpp  sell.cpp  shop.cpp  stay.cpp  tavern.cpp  temple.cpp  training.cpp
src/resources/: CMakeLists.txt  componentstore.cpp  factory.cpp  filestore.cpp  fontstore.cpp  iconstore.cpp  imagestore.cpp  itemstore.cpp  levelstore.cpp  monsterstore.cpp  resourcemanager.cpp  savestore.cpp  spellstore.cpp  stringstore.cpp  texturestore.cpp
src/types/: CMakeLists.txt  character.cpp  component.cpp  config.cpp  configfile.cpp  dice.cpp  error.cpp  explore.cpp  game.cpp  image.cpp  inventory.cpp  item.cpp  itemtype.cpp  level.cpp  monster.cpp  monstertype.cpp  scopedtimer.cpp  state.cpp  textfile.cpp  tile.cpp
tmp/: test  test.cpp
(+106 files in other folders)
